--- a/src/components/fixturebox.scss
+++ b/src/components/fixturebox.scss
@@ -12,3 +12,28 @@
 .fixturebox_heading {
     font-weight: bold;
 }
+
+.fixturebox_background{
+    //background-image: url('/src/assets/fairy_lights/Fairy_Lights_on_full.png');
+    //background-image: url('/src/assets/fairy_lights/on.png');
+    //background-color: green;
+    background-size:100%;
+    background-position: center;
+    background-repeat: no-repeat;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    height: 100%;
+    z-index: -10;
+    filter: blur(1px);
+    opacity: .4;
+}
+
+.inverted{
+    filter: blur(1px) invert(100%);
+}
+
+.containerdiv{
+    position: relative;
+}
