--- a/src/components/fixturebox.scss
+++ b/src/components/fixturebox.scss
@@ -17,6 +17,7 @@
     //background-image: url('/src/assets/fairy_lights/Fairy_Lights_on_full.png');
     //background-image: url('/src/assets/fairy_lights/on.png');
     //background-color: green;
+    border-radius: 0.375rem; // Same as Chakra UI button's border radius
     background-size:100%;
     background-position: center;
     background-repeat: no-repeat;
@@ -24,7 +25,7 @@
     top: 0px;
     left: 0px;
     width: 100%;
-    height: 100%;
+    height: min(100%, 300px); // 300px is the maximum width of fixture boxes. This prevents the background from moving down
     z-index: -10;
     filter: blur(1px);
     opacity: .4;
