--- a/src/components/fixturebox.scss
+++ b/src/components/fixturebox.scss
@@ -1,6 +1,24 @@
 .fixturebox {
     border-width: 2px;
     border-radius: 0.375rem; // Same as Chakra UI button's border radius
+    /* backdrop-filter: blur(10px); /*  blur the background */
+    
+}
+
+.fixturebox_background_color {
+    border-radius: 0.375rem; // Same as Chakra UI button's border radius
+    background-size:100%;
+    background-position: center;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    //height: min(100%, 300px); // 300px is the maximum width of fixture boxes. This prevents the background from moving down
+    height: 100%;
+    z-index: -3;
+    background: var(--chakra-colors-chakra-body-bg);
+    opacity: 0.6;
+    //background-color: green;
 }
 
 .fixturebox_subbox {
@@ -12,7 +30,7 @@
     font-weight: bold;
 }
 
-.fixturebox_background{
+.fixturebox_background_image{
     //background-image: url('/src/assets/fairy_lights/Fairy_Lights_on_full.png');
     //background-image: url('/src/assets/fairy_lights/on.png');
     //background-color: green;
